<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1700a">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        tools:context="com.example.android.kwizquiz.MainActivity"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="@string/lbl_cand_name"
                android:textSize="20sp"
                android:textColor="#fff" />

            <EditText
                android:id="@+id/candidate_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ff5"
                android:hint="@string/txt_cand_name_hint"
                android:inputType="textCapWords"
                android:textSize="18dp"
                android:textColor="#fff"
                android:textColorHint="#aaa" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:paddingBottom="14dp"
            android:text="@string/quiz_instructions"
            android:textColor="#fff"
            android:textSize="20sp" />


        <Button
            android:id="@+id/btnBeginQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="Start"
            android:onClick="beginQuiz"
            android:textSize="30sp"  />

    </LinearLayout>
</ScrollView>